fix: "Add Pokemon" bar overlapping header links
pokemon bar was covering the header links so they couldn't be clicked as easily

to fix I moved the add pokemon bar downward

--- a/src/components/PokemonSelector.css
+++ b/src/components/PokemonSelector.css
@@ -1,5 +1,5 @@
 #pokemonSelector {
-    margin-top: 43px;
+    margin-top: 100px;
     width: 100%;
     display: flex;
     justify-content: center;
